--- a/CourseWork/Resources/language.ru-RU.xaml
+++ b/CourseWork/Resources/language.ru-RU.xaml
@@ -2,4 +2,15 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:v="clr-namespace:System;assembly=mscorlib">
     <v:String x:Key="Test">Тест</v:String>
+    <v:String x:Key="Home">Главная</v:String>
+    <v:String x:Key="Cart">Корзина</v:String>
+    <v:String x:Key="About">О нас</v:String>
+    <v:String x:Key="Search">Поиск</v:String>
+    <v:String x:Key="Settings">Настройки</v:String>
+    <v:String x:Key="Name">Название: </v:String>
+    <v:String x:Key="Quantity">На складе: </v:String>
+    <v:String x:Key="Price">Цена: </v:String>
+    <v:String x:Key="Description">Описание:</v:String>
+    <v:String x:Key="Category">Категория:</v:String>
+    <v:String x:Key="Mark">Марка:</v:String>
 </ResourceDictionary>
