--- a/CourseWork/Views/AuthView.xaml
+++ b/CourseWork/Views/AuthView.xaml
@@ -7,6 +7,7 @@
         xmlns:local="clr-namespace:CourseWork.Views"
         xmlns:viewmodel ="clr-namespace:CourseWork.ViewModels"
         mc:Ignorable="d"
+        WindowStartupLocation="CenterScreen"
         Title="AuthView" Height="500" Width="350">
     <Grid>
         <ContentControl Content="{Binding CurrentViewModel}"/>
