--- a/CourseWork/Views/HomeView.xaml
+++ b/CourseWork/Views/HomeView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:CourseWork.Views" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" FontFamily="Helvetica">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="46*"/>
@@ -15,7 +15,9 @@
             <RowDefinition Height="265*"/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Margin="0,0,0,0.4">
-            <Label Content="Home View" FontSize="16"/>
+            <materialDesign:Card Margin="10,2,10,10" materialDesign:ShadowAssist.ShadowDepth="Depth4" UniformCornerRadius="5">
+                <TextBlock Text="Welcome to AutoLight part shop" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="25"/>
+            </materialDesign:Card>
         </Grid>
         <Grid Grid.Row="1">
             <materialDesign:Card Margin="10,10,10,10" UniformCornerRadius="5" materialDesign:ShadowAssist.ShadowDepth="Depth4">
@@ -28,11 +30,11 @@
                               Command="{Binding RelativeSource={RelativeSource AncestorType=ListBox}, Path=DataContext.FindByCategory}"
                               CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=ListBox}, Path=FindByCategory}" />
                                 </Border.InputBindings>
-                                <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
+                                <StackPanel Orientation="Vertical">
                                     <materialDesign:Card UniformCornerRadius="10">
-                                        <StackPanel Orientation="Vertical" Height="45" Width="100" HorizontalAlignment="Center">
-                                            <TextBlock Text="{Binding Name}"/>
-                                        </StackPanel>
+                                        <Grid Height="45" Width="100">
+                                            <TextBlock Text="{Binding Name}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                        </Grid>
                                     </materialDesign:Card>
                                 </StackPanel>
                             </Border>
@@ -60,7 +62,7 @@
         </Grid>
         <Grid Grid.Row="3">
             <materialDesign:Card Margin="10,10,10,10" materialDesign:ShadowAssist.ShadowDepth="Depth4" UniformCornerRadius="5">
-                <ListBox ItemsSource="{Binding Parts}" SelectedItem="{Binding SelectedPart}" x:Name="partList" MouseDoubleClick="partList_MouseDoubleClick" Height="244.4" SelectionMode="Extended">
+                <ListBox ItemsSource="{Binding Parts}" SelectedItem="{Binding SelectedPart}" x:Name="partList" MouseDoubleClick="partList_MouseDoubleClick" MinHeight="244.4" MaxHeight="400" SelectionMode="Extended">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Border CornerRadius="6" BorderThickness="1" DockPanel.Dock="Top" BorderBrush="Transparent">
@@ -71,14 +73,30 @@
                                 </Border.InputBindings>
                                 <StackPanel Orientation="Vertical">
                                 <materialDesign:Card UniformCornerRadius="10">
-                                <StackPanel Orientation="Vertical" Height=" 200" Width="120">
+                                <StackPanel Orientation="Vertical" Height=" 230" Width="130">
                                     
-                                    <Image Width="120" Height="120" Margin="5" Source="{Binding ImageLink}" />
+                                    <Image Width="130" Height="110" Margin="5" Source="{Binding ImageLink}" />
                                         <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Name: " FontFamily="Helvetica"/>
+                                            <TextBlock Text="{DynamicResource Name}" FontFamily="Helvetica"/>
                                             <TextBlock Text="{Binding Name}" FontFamily="Helvetica"/>
                                         </StackPanel>
-                                        <Separator Background="Black"/>
+                                            <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="{DynamicResource Quantity}"/>
+                                                <TextBlock Text="{Binding Quantity}"/>
+                                            </StackPanel>
+                                            <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="{DynamicResource Price}"/>
+                                                <TextBlock Text="{Binding Price}"/>
+                                            </StackPanel>
+                                            <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="Category: "/>
+                                                <TextBlock Text="{Binding Category.Name}"/>
+                                            </StackPanel>
+                                            <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="Mark: "/>
+                                                <TextBlock Text="{Binding Mark.MarkName}"/>
+                                            </StackPanel>
+                                            <Separator Background="Black"/>
                                         <Button Command="{Binding RelativeSource={RelativeSource AncestorType=ListBox}, Path=DataContext.OpenFullInfo}"/>
                                         </StackPanel>
                                 </materialDesign:Card>
